--- a/Flask_template_04_Inheritance_03.html
+++ b/Flask_template_04_Inheritance_03.html
@@ -2,6 +2,6 @@
 
 {%block content %}
 <h1>This is the puppy page {{name|capitalize}}</h1>
-
+<a href="{{url_for('static',filename='enes.jpg')}}">Here</a>
 
 {%endblock%}
