--- a/index_flash.html
+++ b/index_flash.html
@@ -22,7 +22,9 @@
 
   <form method="POST">
     {{form.hidden_tag()}}
+    {{form.breed.label}}{{form.breed}}
     {{form.submit()}}
+
   </form>
 
   </body>
